client/src/dashboard/styles/_base.scss
html {
  overflow-x: hidden;
  font-size: 90%;
  min-width: $screen-min;

  @include media($screen-sm) {
    font-size: 80%;
  }

  @include media($screen-md) {
    font-size: 90%;
  }

  @include media($screen-lg) {
    font-size: 100%;
  }
}

body {
  margin: 0;
  font-size: $base-font-size;
  line-height: $base-line-height;
  font-weight: 400;
  color: $primary-text-colour;
  background-color: $white;
  -webkit-text-size-adjust: 100%;
  overflow-x: hidden;
}

h1 {
  font-size: 1.5 * $fallback;
  font-size: 1.5rem;
  font-weight: 700;
  margin-bottom: 1.5rem;
  margin-top: $gutter / 2;

  @include media($screen-sm) {
    font-size: 2.25 * $fallback;
    font-size: 2.25rem;
  }
}

h2 {
  font-size: 1.3 * $fallback;
  font-size: 1.3rem;
  font-weight: 600;

  @include media($screen-sm) {
    font-size: 1.875 * $fallback;
    font-size: 1.875rem;
  }
}

h3 {
  font-size: 1.25 * $fallback;
  font-size: 1.25rem;
  font-weight: 600;
}

h4 {
  font-size: 1 * $fallback;
  font-size: 1rem;
  font-weight: 400;
}

.patterns { // svg patterns
  position: absolute;
  left: -1000px;
  display: none;
}

.container {
  @extend .clearfix;
}

.fa-arrow-unchanged {
  &::before {
    content: '\f068';
  }
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  border: 0;
}

.hide-on-desktop {
  @media (min-width: 769px) {
    display: none;
  }
}

.hide-on-mobile {
  @media (max-width: 768px) {
    display: none;
  }
}

.hide-on-desktop-tablet {
  @media (min-width: 769px) {
    display: none !important;
  }
}

